--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,7 +42,7 @@
             <a class="category" href="#">Categories</a>
             <ul>
               {% for category in site.categories %} 
-                <li><a href="{{ category | first }}.html">{{ category | first }}</a></li> 
+                <li><a href="{{site.url}}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
               {% endfor %} 
             </ul>
           </div>
@@ -62,11 +62,11 @@
               {% endfor %}
             </ul>
           </div><!-- item -->
-          <div class="item">
+          <div class="item categories">
             <h3>Categories</h3>
             <ul> 
                 {% for category in site.categories %} 
-                  <li><a href="{{ page.url.archive }}#{{ category | first }}">{{ category | first }}</a></li> 
+                  <li><a href="{{ site.url }}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
                 {% endfor %} 
             </ul> 
           </div><!-- item -->
@@ -104,5 +104,12 @@
           </div>
         </article>
       </div>
+      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+      <script type="text/javascript">
+        $('a.category').click( function() {
+          $('.mobile-band ul').slideToggle(350);
+          return false;
+        });
+      </script>
   </body>
 </html>
