--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ layout: default
         <h3>Most Recent</h3>
         <ul class="posts">
           {% for post in site.related_posts limit:5 %}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+            <li><a href="{{site.url}}{{ post.url }}">{{ post.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
