--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" media="screen" href="{{site.url}}css/screen.css" type="text/css" />
+    <link rel="stylesheet" media="screen" href="{{site.baseurl}}css/screen.css" type="text/css" />
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
     
@@ -29,20 +29,20 @@
   <body>
       <header>
         <div id="logo">
-          <a href="{{site.url}}"><img src="{{site.url}}images/logo.png" alt="Tiny Factory"/></a>
+          <a href="{{site.baseurl}}"><img src="{{site.baseurl}}images/logo.png" alt="Tiny Factory"/></a>
         </div><!-- logo -->
   
         <nav class="mobile-nav">
           <div class="mobile-band">
             {% for page in site.html_pages %}
             {% if page.title %}
-              <a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a>
+              <a href="{{site.url}}{{page.url}}">{{ page.title }}</a>
             {% endif %}
           {% endfor %}
             <a class="category" href="#">Categories</a>
             <ul>
               {% for category in site.categories %} 
-                <li><a href="{{site.url}}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
+                <li><a href="{{site.url}}/archive.html#{{ category | first }}">{{ category | first }}</a></li> 
               {% endfor %}
             </ul>
           </div>
