--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,17 @@ layout: default
 ---
 
 <div id="container" class="single">
+
   <div class="sidebar">
+    <div class="side-logo"><a href="{{site.url}}"><img src="{{site.url}}/images/logo.png" alt=""></a></div>
       <div class="item">
         <h3>Contribute</h3>
-        <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-          <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=fork"
-  allowtransparency="true" frameborder="0" scrolling="0" width="53px" height="20px"></iframe>
+        <div class="github-buttons">
+          <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=watch&count=true"
+            allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+            <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=fork"
+            allowtransparency="true" frameborder="0" scrolling="0" width="53px" height="20px"></iframe>
+        </div>
       </div><!-- item -->
       <div class="item">
         <h3>Documentation</h3>
@@ -17,7 +21,7 @@ layout: default
           <li><a href="{{site.url}}">Home</a></li>
           {% for page in site.html_pages %}
             {% if page.title %}
-              <li><a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a></li>
+              <li><a href="{{site.url}}{{page.url}}">{{ page.title }}</a></li>
             {% endif %}
           {% endfor %}
         </ul>
@@ -43,7 +47,7 @@ layout: default
         <h3>Most Recent</h3>
         <ul class="posts">
           {% for post in site.related_posts limit:5 %}
-            <li><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
+            <li><a href="{{site.url}}{{ post.url }}">{{ post.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
