--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -95,7 +95,7 @@
                 <ul>
                   {% for posts in category %}
                     {% for post in posts %} 
-                      <li><a href="{{ post.url }}">{{ post.title }}</a> <span class="archive-date">{{ post.date | date: "%m.%d.%y" }}</span></li>
+                      <li><a href="{{site.url}}{{ post.url }}">{{ post.title }}</a> <span class="archive-date">{{ post.date | date: "%m.%d.%y" }}</span></li>
                     {% endfor %} 
                   {% endfor %} 
                 </ul>
