--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
             {% endif %}
           {% endfor %}
           {% if match %}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+            <li><a href="{{site.url}}{{ post.url }}">{{ post.title }}</a></li>
           {% endif %}                       
         {% endfor %}
          
