--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
   <body>
       <header>
         <div id="logo">
-          <a href="{{site.baseurl}}"><img src="{{site.baseurl}}images/logo.png" alt="Tiny Factory"/></a>
+          <a href="{{site.url}}"><img src="{{site.url}}images/logo.png" alt="Tiny Factory"/></a>
         </div><!-- logo -->
   
         <nav class="mobile-nav">
@@ -42,7 +42,7 @@
             <a class="category" href="#">Categories</a>
             <ul>
               {% for category in site.categories %} 
-                <li><a href="{{site.url}}/archive.html#{{ category | first }}">{{ category | first }}</a></li> 
+                <li><a href="{{site.url}}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
               {% endfor %}
             </ul>
           </div>
