--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,7 +29,7 @@
   <body>
       <header>
         <div id="logo">
-          <a href="{{site.url}}"><img src="{{site.baseurl}}images/logo.png" alt="Tiny Factory"/></a>
+          <a href="{{site.baseurl}}"><img src="{{site.baseurl}}/images/logo.png" alt="Tiny Factory"/></a>
         </div><!-- logo -->
   
         <nav class="mobile-nav">
@@ -67,7 +67,7 @@
             <h3>Categories</h3>
             <ul> 
                 {% for category in site.categories %} 
-                  <li><a href="{{ site.url }}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
+                  <li><a href="{{ site.url }}/archive.html#{{ category | first }}">{{ category | first }}</a></li> 
                 {% endfor %} 
             </ul> 
           </div><!-- item -->
