Hopefully the final cleanup.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,7 +29,7 @@
   <body>
       <header>
         <div id="logo">
-          <a href="{{site.baseurl}}"><img src="{{site.baseurl}}/images/logo.png" alt="Tiny Factory"/></a>
+          <a href="{{site.url}}"><img src="{{site.baseurl}}/images/logo.png" alt="Tiny Factory"/></a>
         </div><!-- logo -->
   
         <nav class="mobile-nav">
