--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div id="container" class="single">
 
-  <div class="sidebar">
+  <div id="sidebar">
     <div class="side-logo"><a href="{{site.url}}"><img src="{{site.url}}/images/logo.png" alt=""></a></div>
       <div class="item">
         <h3>Contribute</h3>
