--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     {% if page.description %}
-    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1;"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1 maximum-scale=1"/>
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -53,11 +53,8 @@
       </div>
 
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-      <script type="text/javascript">
-        $('a.category').click( function() {
-          $('.mobile-band ul').slideToggle(350);
-          return false;
-        });
-      </script>
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
+      <script type="text/javascript" src="{{site.url}}/js/slimScroll.min.js"></script>
+      <script type="text/javascript" src="{{site.url}}/js/web.js"></script>
   </body>
 </html>
