--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -122,8 +122,7 @@ strong
 		&.single
 			margin-top: 25px
 
-
-	.sidebar
+	#sidebar
 		width: 25%
 		text-align: right
 		border-right: 1px solid darken($body, 8%)
@@ -142,9 +141,13 @@ strong
 			padding-right: 0
 			background: darken($body, 3%)
 			color: #fff
-			
-			&:hover
-				overflow-y: scroll
+
+			&.mousescroll
+				overflow: hidden
+
+				&:hover
+					overflow-y: scroll
+
 
 			.side-logo
 				margin: 30px 30px 0 0
@@ -417,7 +420,6 @@ li div.highlight
 
 				&:hover
 					border-bottom: none !important
-
 
 ::selection
 	background: $red
