--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,7 +42,7 @@
             <a class="category" href="#">Categories</a>
             <ul>
               {% for category in site.categories %} 
-                <li><a href="{{site.url}}archive.html#{{ category | first }}">{{ category | first }}</a></li> 
+                <li><a href="{{site.url}}/archive.html#{{ category | first }}">{{ category | first }}</a></li> 
               {% endfor %} 
             </ul>
           </div>
