--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -75,7 +75,7 @@
               <h3>Newest Docs</h3>
               <ul>
                 {% for post in site.posts limit:5 %}
-                  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+                  <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
                 {% endfor %}
               </ul>
             </div><!-- item -->
