--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -313,6 +313,10 @@ strong
 		color: #333
 		margin-bottom: 250px
 
+		a
+			color: lighten($red, 10%)
+			+bold
+
 		+desktop-and-up
 			width: 100%
 			margin-top: 50px
