--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     {% if page.description %}
-    <meta name="viewport" content="width=device-width; initial-scale=1 maximum-scale=1"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1, maximum-scale=1"/>
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
