More style updates

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -116,6 +116,9 @@ strong
 			width: 90% !important
 			margin-left: 0 !important
 
+		&.page .entry
+			width: 90%
+
 	+tablet-only
 		max-width: 820px
 
@@ -363,6 +366,8 @@ strong
 			font-size: 32px
 			+gotham-light
 			margin-bottom: 20px
+			border-bottom: 1px solid darken($body, 8%)
+			line-height: 1.6em
 
 			+mobile-only
 				line-height: 1.2em
