--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -48,7 +48,7 @@
         </nav>
       </header>
 
-      <div id="container">
+      <div id="container" class="page">
         <div id="sidebar" class="mousescroll">
             <div class="side-logo"><a href="{{site.url}}"><img src="{{site.url}}/images/logo.png" alt=""></a></div>
             <div class="item">
