--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -383,6 +383,10 @@ strong
 		a img
 			vertical-align: bottom
 
+.highlight
+	font-family: "Monaco", monospace !important
+	font-size: 12px !important
+
 li div.highlight
 	padding: 20px 20px 0 !important
 
