Scroll Y if string inside of .hightlight is too long

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -391,6 +391,7 @@ strong
 .highlight
 	font-family: "Monaco", monospace !important
 	font-size: 12px !important
+	overflow-y: scroll
 
 li div.highlight
 	padding: 20px 20px 0 !important
