--- a/css/screen.css
+++ b/css/screen.css
@@ -713,6 +713,7 @@ strong {
 .highlight {
   font-family: "Monaco", monospace !important;
   font-size: 12px !important;
+  overflow-y: scroll;
 }
 
 li div.highlight {
