--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,6 +25,8 @@
       })();
     </script>
     {% endif %}
+    <script type="text/javascript" src="//use.typekit.net/xkw5qeu.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
       <header>
