--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -89,6 +89,8 @@ p
 		border: 1px solid darken($body, 8%)
 		+border-radius(2px)
 		background: darken($body, 2%)
+		font-family: monospace
+		font-size: 11px
 
 strong
 	+bold
