--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,12 +8,7 @@ layout: default
     <div class="side-logo"><a href="{{site.url}}"><img src="{{site.url}}/images/logo.png" alt=""></a></div>
       <div class="item">
         <h3>Contribute</h3>
-        <div class="github-buttons">
-          <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=watch&count=true"
-            allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-            <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=TinyFactory&repo=Tiny-Factory-Docs&type=fork"
-            allowtransparency="true" frameborder="0" scrolling="0" width="53px" height="20px"></iframe>
-        </div>
+        <a href="https://github.com/TinyFactory/Tiny-Factory-Docs">Fork this on GitHub</a>
       </div><!-- item -->
       <div class="item">
         <h3>Documentation</h3>
