Minor template changes, sidebar cleanup, and IE8 support.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -109,9 +109,6 @@
           </div>
         </article>
       </div>
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
-      <script type="text/javascript" src="{{site.url}}/js/slimScroll.min.js"></script>
-      <script type="text/javascript" src="{{site.url}}/js/web.js"></script>
+      {% include footer.md %}
   </body>
 </html>
