--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -190,7 +190,7 @@ strong
 					display: block
 					height: 100%
 					border-bottom: none
-					padding: 5px 30px 5px 0
+					padding: 5px 30px 5px 25px
 
 					&:hover
 						border-bottom: none
@@ -324,11 +324,11 @@ strong
 			+bold
 
 		+desktop-and-up
-			width: 100%
+			width: 98%
 			margin-top: 50px
 
-		+tablet-portrait-only
-			width: 60%
+		// +tablet-portrait-only
+		// 	width: 60%
 
 		+mobile-only
 			width: 100%
@@ -480,6 +480,7 @@ li div.highlight
 			+inline-block
 			margin-right: 20px
 			color: #333333
+			margin-left: 0 !important
 			
 			a
 				font-size: 15px !important
@@ -599,3 +600,82 @@ li div.highlight
 	background: $red
 	color: #fff
 	text-shadow: 0px 1px darken($red, 20%)
+
+.jspContainer
+	overflow: hidden
+	position: absolute
+
+.jspPane
+	position: absolute
+	// width: auto !important // Prevents sidebar from shifting when scrollbar renders.
+
+.jspVerticalBar
+	position: absolute
+	top: 0
+	right: 0
+	width: 8px
+	height: 100%
+
+.jspHorizontalBar
+	position: absolute
+	bottom: 0
+	left: 0
+	width: 100%
+	height: 16px
+
+.jspVerticalBar *, .jspHorizontalBar *
+	margin: 0
+	padding: 0
+
+.jspCap
+	display: none
+
+.jspHorizontalBar .jspCap
+	float: left
+
+.jspTrack
+	background: #d7d7d7
+	position: relative
+
+.jspDrag
+	background: #bf2e1a
+	position: relative
+	top: 0
+	left: 0
+	cursor: pointer
+	+border-radius(5px)
+
+.jspHorizontalBar
+	
+	.jspTrack, .jspDrag
+		float: left
+		height: 100%
+
+.jspArrow
+	background: #50506d
+	text-indent: -20000px
+	display: block
+	cursor: pointer
+	
+	&.jspDisabled
+		cursor: default
+		background: #80808d
+
+.jspVerticalBar .jspArrow
+	height: 16px
+
+.jspHorizontalBar .jspArrow
+	width: 16px
+	float: left
+	height: 100%
+
+.jspVerticalBar .jspArrow:focus
+	outline: none
+
+.jspCorner
+	background: #eeeef4
+	float: left
+	height: 100%
+
+* html .jspCorner
+	margin: 0 -3px 0 0
